[package]
name = "launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
shlex = "1.3.0"
eframe = "0.30.0"
egui = "0.30.0"
egui_extras = { version = "0.30.0", features = ["default", "image"] }
env_logger = { version = "0.11.6", default-features = false, features = [
    "auto-color",
    "humantime",
] }